--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,18 +23,7 @@
                   %span.input-group-btn
                     %button.btn.btn-primary{:type => "button"} Search
           .col-md-3
-            .navbar.navbar-inverse{:role => "banner"}
-              %nav.collapse.navbar-collapse.bs-navbar-collapse.navbar-right{:role => "navigation"}
-                %ul.nav.navbar-nav
-                  %li.dropdown
-                    %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-                      My Account
-                      %b.caret
-                    %ul.dropdown-menu.animated.fadeInUp
-                      %li
-                        %a{:href => "#"} Profile
-                      %li
-                        %a{:href => "/auth/github"} Login
+            = render('navigation')
     .page-content
       .row
         .col-md-2
@@ -42,7 +31,7 @@
             %ul.nav
               / Main menu
               %li.current
-                %a{:href => "index.html"}
+                %a{:href => "/"}
                   %i.glyphicon.glyphicon-home
                   Dashboard
               %li
