--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,7 +11,11 @@
  * file per style scope.
  *
  *= require_self
- *= require bootstrap.min
  *= require styles
+ *= require buttons
+ *= require sprockets-octicons
  *= require_tree .
  */
+
+@import "bootstrap";
+@import "font-awesome";
