--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,4 +1,9 @@
-%h1 welcome
-%p
-  %a{:href => "/auth/dropbox_oauth2"} Dropboxと同期
-  %p test
+.col-md-12
+  .content-box-large
+    .panel-heading
+      .panel-title Welcome
+    .panel-body
+      %a.btn.btn-primary.btn-sm{href: "/auth/dropbox_oauth2"}
+        %i.fa.fa-dropbox.fa-2x
+        Linking Dropbox account
+
