--- a/app/views/repos/edit.html.haml
+++ b/app/views/repos/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing repo
+.col-md-10
+  .content-box-large
+    .panel-heading
+      .panel-title Editing repo
+    .panel-body
+      = render('form')
 
-= render 'form'
+      = link_to 'List', repos_path, class: "btn btn-default btn-sm"
 
-= link_to 'Show', @repo
-\|
-= link_to 'Back', repos_path
