--- a/app/views/commits/index.html.haml
+++ b/app/views/commits/index.html.haml
@@ -1,33 +1,28 @@
-.col-md-10
+.col-md-12
   .content-box-large
     .panel-heading
       .panel-title Commits History
     .panel-body
-      %table
+      %table.table.table-condensed
         %thead
           %tr
-            %th Repo
-            %th Provider
-            %th Ref
-            %th Commit ID
-            %th Commit Timestamp
-            %th Commit Message
-            %th Repository name
+            %th repository
+            %th Commit
+            %th Branch
+            %th Timestamp
             %th
             %th
             %th
-
-        - @commits.each do |commit|
-          %tbody
+        %tbody
+          - @commits.each do |commit|
             %tr
-              %td= commit.repo_id
-              %td= commit.provider
-              %td= commit.ref
-              %td= commit.commit_id
+              %td= link_to commit.repository_name, commit.repository_url
+              %td= link_to "#{commit.commit_id.to_s.slice(0,7)}", commit.commit_url
+              %td= commit.ref.to_s.gsub(%r|^.*/|,"")
               %td= commit.commit_timestamp
-              %td= commit.commit_message
-              %td= commit.repository_name
-              %td= link_to 'Show', commit
-              %td= link_to 'Edit', edit_commit_path(commit)
-              %td= link_to 'Destroy', commit, :method => :delete, :data => { :confirm => 'Are you sure?' }
+              %td{rowspan:2}= link_to 'Show', commit, class: "btn btn-default btn-sm"
+              %td{rowspan:2}= link_to 'Edit', edit_commit_path(commit), class: "btn btn-default btn-sm"
+              %td{rowspan:2}= link_to 'Destroy', commit, :method => :delete, :data => { :confirm => 'Are you sure?' }, class: "btn btn-danger btn-sm"
+            %tr
+              %td{colspan:4}= commit.commit_message
 
